--- a/new add.html
+++ b/new add.html
@@ -11,7 +11,7 @@
         </a>
         <hr>
         <small><h1>demo 2</h1></small>
-        <pre><h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim earum porro consequatur iure impedit, error accusantium saepe quo minus soluta dicta ea aliquid officiis facilis quisquam veritatis eaque animi reprehenderit.</h1></pre><br><br>
+        <pre><h1>Lorem ipsum dolor sit amet consectetur,                       adipisicing elit. Enim earum porro consequatur iure impedit, error accusantium saepe quo minus soluta dicta ea aliquid officiis facilis quisquam veritatis eaque animi reprehenderit.</h1></pre><br><br>
   
         <p><h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo iste unde, voluptatibus earum laborum a sequi omnis facilis fugiat velit inventore fuga asperiores rem at atque reiciendis iure molestiae maiores.</h1></p> <br><br>
     
@@ -28,8 +28,8 @@
             <li><h2>sub</h2></li>
         </ol>
         
-        <ul type="i">
-         <li><h2>>yo</h2></li>
+        <ul type="square">
+         <li><h2>sqayo</h2></li>
          <li><h2>lol</h2></li>
          <li><h2>no</h2></li>
         </ul>
